# rust-runner

./: Cargo.toml  readme.md
crates/example/: Cargo.toml
crates/example/src/: main.rs
crates/runner/: Cargo.toml
crates/runner-macros/: Cargo.toml
crates/runner-macros/src/: lib.rs
crates/runner/src/: args.rs  command.rs  lib.rs  program.rs  run.rs  validate.rs
crates/runner/src/actions/: do_something_else.rs  do_that.rs  do_this.rs  mod.rs
data/: example.yaml
