[workspace]
resolver = "2"
members = [
    "crates/*"
]

[workspace.dependencies]
async-trait = "0.1.75"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.29"
tokio = { version = "1.35.1", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }